trunk/Archive2/16/4831aeae3aa7af/output
main.cpp: In function 'int main()':
main.cpp:22:16: error: template argument 1 is invalid
     std::vector<
                ^
main.cpp:22:16: error: template argument 2 is invalid
main.cpp:23:1: error: expected unqualified-id before '}' token
 }
 ^
